--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-estaff-localnotification" version="1.0.9" 
+<plugin id="cordova-plugin-estaff-localnotification" version="1.1.1" 
     xmlns="http://apache.org/cordova/ns/plugins/1.0" 
     xmlns:android="http://schemas.android.com/apk/res/android">
     <name>LocalNotification</name>
@@ -15,7 +15,7 @@
             </feature>
         </config-file>
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
-            <activity android:label="MainActivity" android:name="cordova.plugin.estaff.localnotification.MainActivity"></activity>
+            <activity android:label="MainActivity" android:name="cordova.plugin.estaff.localnotification.MainActivity"  android:theme="@android:style/Theme.DeviceDefault.NoActionBar"></activity>
         </config-file>
         <config-file parent="/*" target="AndroidManifest.xml"></config-file>
         <source-file src="res/drawable/notification.png" target-dir="res/drawable" />
